# taskpad

./: .gitignore  BUILD-ALL.md  README.md  sync-variants.ps1  verify-all.ps1
taskpad-android/: .gitignore  SETUP.md  build-android.ps1  build.gradle.kts  settings.gradle.kts
taskpad-android/app/: build.gradle.kts
taskpad-android/app/src/main/: AndroidManifest.xml
taskpad-android/app/src/main/kotlin/com/taskpad/android/: MainActivity.kt
taskpad-android/app/src/main/res/values/: strings.xml  themes.xml
taskpad-android/src/: app.js  index.html
taskpad-tray/: .gitignore  SETUP.md  download-fonts.mjs  package-lock.json  package.json
taskpad-tray/src/: app.js  config.json  index.html
taskpad-tray/src-tauri/: Cargo.toml  tauri.conf.json
taskpad-tray/src-tauri/capabilities/: default.json
taskpad-tray/src-tauri/icons/: icon.icns
taskpad-tray/src-tauri/src/: lib.rs  main.rs
taskpad-tray/src/app/: sync-core.mjs
taskpad-tray/tests/: run-sync-core.mjs  sync-core.test.mjs
taskpad-web/: DEPLOY.md  app.js  config.json  index.html  manifest.json  sw.js
taskpad-web/app/: sync-core.mjs
