[package]
name    = "taskpad"
version = "0.1.0"
edition = "2021"
description = "Taskpad - system tray task panel (Tauri v2, Windows)"

[lib]
name       = "taskpad_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "taskpad"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri                        = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-autostart       = "2"
tauri-plugin-single-instance = "2"
serde                        = { version = "1", features = ["derive"] }
serde_json                   = "1"
# raw-window-handle is re-exported by Tauri - we use the same version it uses
raw-window-handle            = "0.6"

# Win32 API for removing the panel from taskbar / Alt+Tab
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
panic         = "abort"
codegen-units = 1
lto           = true
strip         = true
opt-level     = "s"

[features]
default         = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
